# taskwright

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  config.json  pyproject.toml
.github/workflows/: publish.yml
docs/: ai-assistant-spec.md  ai-intent-spec.md  cli.md  conf.py  development.md  git.md  index.md  installation.md  milestones.md  quickstart.md  usage.md  workspace.md
docs/_static/: .gitkeep
my-workboard/: README.md  config.json  program.json
my-workboard/milestones/: M-07FA-E442.json  M-71E3-91A4.json  M-BETA-2026.json  M-GA-1-0.json  M-INFRA-Q3.json
my-workboard/projects/: P-074A-6ECA-EEB7-B049.json  P-1524-05CC-70F2-9405.json  P-46A9-9162-2B7B-7656.json  P-BB9B-7F98-F322-8849.json  P-CC32-A54B-CC73-D070.json  P-FCD9-A304-903A-A604.json  apollo.json  atlas.json  gemini.json  helios.json  mercury.json  orion.json
my-workboard/tasks/: 0EBB-528F-371E-61AE.json  0FE4-F827-348F-2E08.json  16E2-9378-1E82-19F2.json  3067-802D-56B9-4A0A.json  36C3-AD33-0DD2-0724.json  3A50-8178-5FFE-C65A.json  3F47-D169-7FAF-AB3E.json  439F-EF95-B1C5-AD45.json  4981-D3C1-BEB9-6D08.json  49D9-B6A2-1C0E-1789.json  4DFB-9775-281E-65C1.json  5809-0134-545E-6AD6.json  5CDB-33CE-0665-8667.json  5CE1-0DF3-1CE9-C438.json  5D72-1760-D67E-5801.json  67CC-0A69-D538-4DF0.json  683F-4CD4-AD39-14FE.json  8E33-9800-94E0-4AFB.json  930E-ED39-95A2-37D6.json  A6C5-343C-412B-B4F5.json  TASK-0001.json  (+11 more)
programs/: default.json
projects/: P-1F6C-AE4C-1C6B-A399.json
tests/: test_git_workspace_scope.py  test_render_jsonantt.py  test_ui_state_templates.py  test_workspace_config.py
(+80 files in other folders)
